--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -78,6 +78,7 @@
     "@babel/types": "7.9.6",
     "@next/react-dev-overlay": "9.4.5-canary.13",
     "@next/react-refresh-utils": "9.4.5-canary.13",
+    "acta": "^3.0.6",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-define": "2.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
